# akubata

./: README.md  dbLoader.sql
client/: .env  index.html  package-lock.json  package.json
client/public/: paypal-button.avif
client/src/: App.jsx  index.css  main.jsx
docs/: OrderItems.sql  Orders.sql  Products.sql  Suppliers.sql  Users.sql  addresses.sql  supplier_post_request_explained.md
server/: .env.example  package-lock.json  package.json  server.js
server/config/: db.js  index.js
server/controllers/: addressControllers.js  authControllers.js  cartControllers.js  messageControllers.js  notificationControllers.js  ordersControllers.js  productsControllers.js  suppliersControllers.js
server/db/: index.js
server/emailTemplates/: forgot.html  passwordReset.html  (+1 more)
server2/: .env.example  .gitignore  alembic.ini  pyproject.toml
server2/alembic/: env.py
server2/src/: main.py
server2/src/akubata.egg-info/: PKG-INFO  SOURCES.txt
server2/src/app/: main.py
server2/src/app/api/: deps.py
server2/src/app/api/routes/: __init__.py  address.py  auth.py  users.py
server2/src/app/core/: config.py  security.py
server2/src/app/db/: session.py
server2/src/app/models/: address.py  conversation.py  conversation_participant.py  message.py  notification.py  order.py  order_address.py  order_item.py  order_payment.py  product.py  supplier.py  user.py
server2/src/app/schemas/: address.py  auth.py  user.py
server2/src/app/services/: address_service.py  addresses.py  mailer.py
server2/src/fastapi_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+60 files in other folders)
